tests/NormalTests/paczka1/fuzzy1/99832028.err
Error in line 3: iBqbbdFSGxt A810 35,5
Error in line 7: XfGBvGje19 S378 71,58
Error in line 8: S378 A810 62,3
Error in line 14: oo3jGJ A704 60,5
Error in line 39: iBqbbdFSGxt S378 -3,5
